--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
     "natives": "^1.1.6",
+    "npm": "^6.13.6",
     "postcss-csso": "^3.0.0",
     "require-dir": "^1.0.0",
     "require-yaml": "^0.0.1",
